@@ -15,6 +15,7 @@ Added
 - Can open FileData object with ``file.open()`` to get a file-like object
   that can be used similar to a local file.
 - Added ``read_dicom()`` to ScanData to read the dicom header/file with pydicom
+- ``external_uri`` method to get a full external uri of an XNAT object
 
 0.3.16 - 2019-03-28
 -------------------
